[package]
name = "newsterm"
version = "0.1.0"
authors = ["RubenSystems <ruben.t.j@icloud.com>"]
license = "MIT"
edition = "2021"

[dependencies]
atom_syndication = "0.12.6"
chrono = "0.4.39"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
reqwest = "0.12.12"
rss = "2.0.11"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
